# Aegis---Incident-Intelligence

./: CONTRIBUTING.md  CROSS_VERIFICATION.md  Dockerfile  LICENSE  README.md  TECHNICAL_BREAKDOWN.md  WALKTHROUGH.md  docker-compose.yml  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  live_stream.py  metadata.json  package-lock.json  package.json  server.ts  simulate_anomaly.py
backend/: .env.example  Dockerfile  aegis_dev.db  pyproject.toml  requirements.txt  test.db  test_ai_rca_output.txt  test_ai_rca_output2.txt  test_anomaly.txt  test_anomaly2.txt  test_ingestion.txt  test_ingestion2.txt  test_ingestion3.txt  test_metric.txt  test_metric2.txt  test_metric3.txt  test_metric4.txt  test_metric5.txt  test_results.txt  test_results2.txt
backend/alembic/: env.py
backend/alembic/versions/: 40a762de2fad_initial_schema.py
backend/app/: __init__.py  config.py  database.py  llm.py  logging.py  main.py  middleware.py  models.py  repository.py  schemas.py  tasks.py  worker.py
backend/app/api/: __init__.py  schemas.py
backend/app/api/v1/: __init__.py  health.py  incidents.py  logs.py  metrics.py  stream.py
backend/tests/: __init__.py  conftest.py  test_ai_rca.py  test_anomaly_engine.py  test_api_logs.py  test_api_metrics.py  test_database.py  test_health.py
design/: design.md  requirements.md  tasks.md
src/: App.tsx  api.ts  firebase.ts  index.css  types.ts
src/services/: geminiService.ts
